k8s/platform/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: releaseops
  labels:
    app.kubernetes.io/part-of: releaseops
    platform.releaseops.io/tier: application
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/part-of: releaseops
    platform.releaseops.io/tier: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/part-of: releaseops
    platform.releaseops.io/tier: gitops
